; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ixl/extr_i40e_nvm.c_i40e_nvmupd_state_writing.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ixl/extr_i40e_nvm.c_i40e_nvmupd_state_writing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i40e_hw = type { %struct.TYPE_4__, %struct.TYPE_3__, i8*, i8*, i8* }
%struct.TYPE_4__ = type { i64 }
%struct.TYPE_3__ = type { i64 }
%struct.i40e_nvm_access = type { i32 }

@I40E_SUCCESS = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"i40e_nvmupd_state_writing\00", align 1
@i40e_aqc_opc_nvm_update = common dso_local global i8* null, align 8
@I40E_NVMUPD_STATE_WRITE_WAIT = common dso_local global i8* null, align 8
@EIO = common dso_local global i32 0, align 4
@I40E_NVMUPD_STATE_INIT = common dso_local global i8* null, align 8
@TRUE = common dso_local global i8* null, align 8
@I40E_NVMUPD_STATE_INIT_WAIT = common dso_local global i8* null, align 8
@I40E_DEBUG_NVM = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [38 x i8] c"NVMUPD: bad cmd %s in writing state.\0A\00", align 1
@i40e_nvm_update_state_str = common dso_local global i64* null, align 8
@I40E_NOT_SUPPORTED = common dso_local global i32 0, align 4
@ESRCH = common dso_local global i32 0, align 4
@I40E_AQ_RC_EBUSY = common dso_local global i64 0, align 8
@I40E_GLVFGEN_TIMER = common dso_local global i32 0, align 4
@I40E_DEBUG_ALL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [56 x i8] c"NVMUPD: write semaphore expired (%d >= %lld), retrying\0A\00", align 1
@I40E_RESOURCE_WRITE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [54 x i8] c"NVMUPD: write semaphore reacquire failed aq_err = %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i40e_hw*, %struct.i40e_nvm_access*, i32*, i32*)* @i40e_nvmupd_state_writing to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i40e_nvmupd_state_writing(%struct.i40e_hw* %0, %struct.i40e_nvm_access* %1, i32* %2, i32* %3) #0 {
  %5 = alloca %struct.i40e_hw*, align 8
  %6 = alloca %struct.i40e_nvm_access*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  store %struct.i40e_hw* %0, %struct.i40e_hw** %5, align 8
  store %struct.i40e_nvm_access* %1, %struct.i40e_nvm_access** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %15 = load i32, i32* @I40E_SUCCESS, align 4
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* @FALSE, align 4
  store i32 %16, i32* %11, align 4
  %17 = call i32 @DEBUGFUNC(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %18 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %19 = load %struct.i40e_nvm_access*, %struct.i40e_nvm_access** %6, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = call i32 @i40e_nvmupd_validate_command(%struct.i40e_hw* %18, %struct.i40e_nvm_access* %19, i32* %20)
  store i32 %21, i32* %10, align 4
  br label %22

22:                                               ; preds = %224, %4
  %23 = load i32, i32* %10, align 4
  switch i32 %23, label %154 [
    i32 129, label %24
    i32 128, label %40
    i32 131, label %81
    i32 130, label %116
  ]

24:                                               ; preds = %22
  %25 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %26 = load %struct.i40e_nvm_access*, %struct.i40e_nvm_access** %6, align 8
  %27 = load i32*, i32** %7, align 8
  %28 = load i32*, i32** %8, align 8
  %29 = call i32 @i40e_nvmupd_nvm_write(%struct.i40e_hw* %25, %struct.i40e_nvm_access* %26, i32* %27, i32* %28)
  store i32 %29, i32* %9, align 4
  %30 = load i32, i32* %9, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %39, label %32

32:                                               ; preds = %24
  %33 = load i8*, i8** @i40e_aqc_opc_nvm_update, align 8
  %34 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %35 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %34, i32 0, i32 3
  store i8* %33, i8** %35, align 8
  %36 = load i8*, i8** @I40E_NVMUPD_STATE_WRITE_WAIT, align 8
  %37 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %38 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %37, i32 0, i32 2
  store i8* %36, i8** %38, align 8
  br label %39

39:                                               ; preds = %32, %24
  br label %167

40:                                               ; preds = %22
  %41 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %42 = load %struct.i40e_nvm_access*, %struct.i40e_nvm_access** %6, align 8
  %43 = load i32*, i32** %7, align 8
  %44 = load i32*, i32** %8, align 8
  %45 = call i32 @i40e_nvmupd_nvm_write(%struct.i40e_hw* %41, %struct.i40e_nvm_access* %42, i32* %43, i32* %44)
  store i32 %45, i32* %9, align 4
  %46 = load i32, i32* %9, align 4
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %70

48:                                               ; preds = %40
  %49 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %50 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %49, i32 0, i32 0
  %51 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %50, i32 0, i32 0
  %52 = load i64, i64* %51, align 8
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %54, label %61

54:                                               ; preds = %48
  %55 = load i32, i32* %9, align 4
  %56 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %57 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %56, i32 0, i32 0
  %58 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %57, i32 0, i32 0
  %59 = load i64, i64* %58, align 8
  %60 = call i32 @i40e_aq_rc_to_posix(i32 %55, i64 %59)
  br label %64

61:                                               ; preds = %48
  %62 = load i32, i32* @EIO, align 4
  %63 = sub nsw i32 0, %62
  br label %64

64:                                               ; preds = %61, %54
  %65 = phi i32 [ %60, %54 ], [ %63, %61 ]
  %66 = load i32*, i32** %8, align 8
  store i32 %65, i32* %66, align 4
  %67 = load i8*, i8** @I40E_NVMUPD_STATE_INIT, align 8
  %68 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %69 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %68, i32 0, i32 2
  store i8* %67, i8** %69, align 8
  br label %80

70:                                               ; preds = %40
  %71 = load i8*, i8** @TRUE, align 8
  %72 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %73 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %72, i32 0, i32 4
  store i8* %71, i8** %73, align 8
  %74 = load i8*, i8** @i40e_aqc_opc_nvm_update, align 8
  %75 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %76 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %75, i32 0, i32 3
  store i8* %74, i8** %76, align 8
  %77 = load i8*, i8** @I40E_NVMUPD_STATE_INIT_WAIT, align 8
  %78 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %79 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %78, i32 0, i32 2
  store i8* %77, i8** %79, align 8
  br label %80

80:                                               ; preds = %70, %64
  br label %167

81:                                               ; preds = %22
  %82 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %83 = call i32 @i40e_update_nvm_checksum(%struct.i40e_hw* %82)
  store i32 %83, i32* %9, align 4
  %84 = load i32, i32* %9, align 4
  %85 = icmp ne i32 %84, 0
  br i1 %85, label %86, label %108

86:                                               ; preds = %81
  %87 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %88 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %87, i32 0, i32 0
  %89 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %88, i32 0, i32 0
  %90 = load i64, i64* %89, align 8
  %91 = icmp ne i64 %90, 0
  br i1 %91, label %92, label %99

92:                                               ; preds = %86
  %93 = load i32, i32* %9, align 4
  %94 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %95 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %94, i32 0, i32 0
  %96 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %95, i32 0, i32 0
  %97 = load i64, i64* %96, align 8
  %98 = call i32 @i40e_aq_rc_to_posix(i32 %93, i64 %97)
  br label %102

99:                                               ; preds = %86
  %100 = load i32, i32* @EIO, align 4
  %101 = sub nsw i32 0, %100
  br label %102

102:                                              ; preds = %99, %92
  %103 = phi i32 [ %98, %92 ], [ %101, %99 ]
  %104 = load i32*, i32** %8, align 8
  store i32 %103, i32* %104, align 4
  %105 = load i8*, i8** @I40E_NVMUPD_STATE_INIT, align 8
  %106 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %107 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %106, i32 0, i32 2
  store i8* %105, i8** %107, align 8
  br label %115

108:                                              ; preds = %81
  %109 = load i8*, i8** @i40e_aqc_opc_nvm_update, align 8
  %110 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %111 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %110, i32 0, i32 3
  store i8* %109, i8** %111, align 8
  %112 = load i8*, i8** @I40E_NVMUPD_STATE_WRITE_WAIT, align 8
  %113 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %114 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %113, i32 0, i32 2
  store i8* %112, i8** %114, align 8
  br label %115

115:                                              ; preds = %108, %102
  br label %167

116:                                              ; preds = %22
  %117 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %118 = call i32 @i40e_update_nvm_checksum(%struct.i40e_hw* %117)
  store i32 %118, i32* %9, align 4
  %119 = load i32, i32* %9, align 4
  %120 = icmp ne i32 %119, 0
  br i1 %120, label %121, label %143

121:                                              ; preds = %116
  %122 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %123 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %122, i32 0, i32 0
  %124 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %123, i32 0, i32 0
  %125 = load i64, i64* %124, align 8
  %126 = icmp ne i64 %125, 0
  br i1 %126, label %127, label %134

127:                                              ; preds = %121
  %128 = load i32, i32* %9, align 4
  %129 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %130 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %129, i32 0, i32 0
  %131 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %130, i32 0, i32 0
  %132 = load i64, i64* %131, align 8
  %133 = call i32 @i40e_aq_rc_to_posix(i32 %128, i64 %132)
  br label %137

134:                                              ; preds = %121
  %135 = load i32, i32* @EIO, align 4
  %136 = sub nsw i32 0, %135
  br label %137

137:                                              ; preds = %134, %127
  %138 = phi i32 [ %133, %127 ], [ %136, %134 ]
  %139 = load i32*, i32** %8, align 8
  store i32 %138, i32* %139, align 4
  %140 = load i8*, i8** @I40E_NVMUPD_STATE_INIT, align 8
  %141 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %142 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %141, i32 0, i32 2
  store i8* %140, i8** %142, align 8
  br label %153

143:                                              ; preds = %116
  %144 = load i8*, i8** @TRUE, align 8
  %145 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %146 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %145, i32 0, i32 4
  store i8* %144, i8** %146, align 8
  %147 = load i8*, i8** @i40e_aqc_opc_nvm_update, align 8
  %148 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %149 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %148, i32 0, i32 3
  store i8* %147, i8** %149, align 8
  %150 = load i8*, i8** @I40E_NVMUPD_STATE_INIT_WAIT, align 8
  %151 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %152 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %151, i32 0, i32 2
  store i8* %150, i8** %152, align 8
  br label %153

153:                                              ; preds = %143, %137
  br label %167

154:                                              ; preds = %22
  %155 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %156 = load i32, i32* @I40E_DEBUG_NVM, align 4
  %157 = load i64*, i64** @i40e_nvm_update_state_str, align 8
  %158 = load i32, i32* %10, align 4
  %159 = zext i32 %158 to i64
  %160 = getelementptr inbounds i64, i64* %157, i64 %159
  %161 = load i64, i64* %160, align 8
  %162 = call i32 (%struct.i40e_hw*, i32, i8*, i64, ...) @i40e_debug(%struct.i40e_hw* %155, i32 %156, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0), i64 %161)
  %163 = load i32, i32* @I40E_NOT_SUPPORTED, align 4
  store i32 %163, i32* %9, align 4
  %164 = load i32, i32* @ESRCH, align 4
  %165 = sub nsw i32 0, %164
  %166 = load i32*, i32** %8, align 8
  store i32 %165, i32* %166, align 4
  br label %167

167:                                              ; preds = %154, %153, %115, %80, %39
  %168 = load i32, i32* %9, align 4
  %169 = icmp ne i32 %168, 0
  br i1 %169, label %170, label %229

170:                                              ; preds = %167
  %171 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %172 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %171, i32 0, i32 0
  %173 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %172, i32 0, i32 0
  %174 = load i64, i64* %173, align 8
  %175 = load i64, i64* @I40E_AQ_RC_EBUSY, align 8
  %176 = icmp eq i64 %174, %175
  br i1 %176, label %177, label %229

177:                                              ; preds = %170
  %178 = load i32, i32* %11, align 4
  %179 = icmp ne i32 %178, 0
  br i1 %179, label %229, label %180

180:                                              ; preds = %177
  %181 = load i32, i32* %9, align 4
  store i32 %181, i32* %12, align 4
  %182 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %183 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %182, i32 0, i32 0
  %184 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %183, i32 0, i32 0
  %185 = load i64, i64* %184, align 8
  store i64 %185, i64* %13, align 8
  %186 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %187 = load i32, i32* @I40E_GLVFGEN_TIMER, align 4
  %188 = call i64 @rd32(%struct.i40e_hw* %186, i32 %187)
  store i64 %188, i64* %14, align 8
  %189 = load i64, i64* %14, align 8
  %190 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %191 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %190, i32 0, i32 1
  %192 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %191, i32 0, i32 0
  %193 = load i64, i64* %192, align 8
  %194 = icmp sge i64 %189, %193
  br i1 %194, label %195, label %228

195:                                              ; preds = %180
  %196 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %197 = load i32, i32* @I40E_DEBUG_ALL, align 4
  %198 = load i64, i64* %14, align 8
  %199 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %200 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %199, i32 0, i32 1
  %201 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %200, i32 0, i32 0
  %202 = load i64, i64* %201, align 8
  %203 = call i32 (%struct.i40e_hw*, i32, i8*, i64, ...) @i40e_debug(%struct.i40e_hw* %196, i32 %197, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.2, i64 0, i64 0), i64 %198, i64 %202)
  %204 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %205 = call i32 @i40e_release_nvm(%struct.i40e_hw* %204)
  %206 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %207 = load i32, i32* @I40E_RESOURCE_WRITE, align 4
  %208 = call i32 @i40e_acquire_nvm(%struct.i40e_hw* %206, i32 %207)
  store i32 %208, i32* %9, align 4
  %209 = load i32, i32* %9, align 4
  %210 = icmp ne i32 %209, 0
  br i1 %210, label %211, label %224

211:                                              ; preds = %195
  %212 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %213 = load i32, i32* @I40E_DEBUG_ALL, align 4
  %214 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %215 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %214, i32 0, i32 0
  %216 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %215, i32 0, i32 0
  %217 = load i64, i64* %216, align 8
  %218 = call i32 (%struct.i40e_hw*, i32, i8*, i64, ...) @i40e_debug(%struct.i40e_hw* %212, i32 %213, i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str.3, i64 0, i64 0), i64 %217)
  %219 = load i32, i32* %12, align 4
  store i32 %219, i32* %9, align 4
  %220 = load i64, i64* %13, align 8
  %221 = load %struct.i40e_hw*, %struct.i40e_hw** %5, align 8
  %222 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %221, i32 0, i32 0
  %223 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %222, i32 0, i32 0
  store i64 %220, i64* %223, align 8
  br label %227

224:                                              ; preds = %195
  %225 = load i8*, i8** @TRUE, align 8
  %226 = ptrtoint i8* %225 to i32
  store i32 %226, i32* %11, align 4
  br label %22

227:                                              ; preds = %211
  br label %228

228:                                              ; preds = %227, %180
  br label %229

229:                                              ; preds = %228, %177, %170, %167
  %230 = load i32, i32* %9, align 4
  ret i32 %230
}

declare dso_local i32 @DEBUGFUNC(i8*) #1

declare dso_local i32 @i40e_nvmupd_validate_command(%struct.i40e_hw*, %struct.i40e_nvm_access*, i32*) #1

declare dso_local i32 @i40e_nvmupd_nvm_write(%struct.i40e_hw*, %struct.i40e_nvm_access*, i32*, i32*) #1

declare dso_local i32 @i40e_aq_rc_to_posix(i32, i64) #1

declare dso_local i32 @i40e_update_nvm_checksum(%struct.i40e_hw*) #1

declare dso_local i32 @i40e_debug(%struct.i40e_hw*, i32, i8*, i64, ...) #1

declare dso_local i64 @rd32(%struct.i40e_hw*, i32) #1

declare dso_local i32 @i40e_release_nvm(%struct.i40e_hw*) #1

declare dso_local i32 @i40e_acquire_nvm(%struct.i40e_hw*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
